--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ set(HEADER_FILES
         include/SimpleGraph.h
         include/SimpleEstimator.h
         include/SimpleEvaluator.h
-        include/PathQuery.h)
+        include/PathQuery.h
+        include/Histogram.h)
 
 set(SOURCE_FILES
         src/main.cpp
@@ -27,6 +28,7 @@ set(SOURCE_FILES
         src/SimpleGraph.cpp
         src/SimpleEstimator.cpp
         src/SimpleEvaluator.cpp
-        src/PathQuery.cpp)
+        src/PathQuery.cpp
+        src/Histogram.cpp)
 
 add_executable(quicksilver ${SOURCE_FILES} ${HEADER_FILES})
