--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,7 @@ set(HEADER_FILES
         include/SimpleGraph.h
         include/SimpleEstimator.h
         include/SimpleEvaluator.h
-        include/PathQuery.h
-        include/Histogram.h)
+        include/PathQuery.h)
 
 set(SOURCE_FILES
         src/main.cpp
@@ -28,7 +27,6 @@ set(SOURCE_FILES
         src/SimpleGraph.cpp
         src/SimpleEstimator.cpp
         src/SimpleEvaluator.cpp
-        src/PathQuery.cpp
-        src/Histogram.cpp)
+        src/PathQuery.cpp)
 
 add_executable(quicksilver ${SOURCE_FILES} ${HEADER_FILES})
